# delivery

./: Dockerfile  README.md  alembic.ini  app.py  docker-compose.yaml  domain_events_storage.py  ioc.py  kafka_app.py  periodic_tasks.py  pyproject.toml  settings.py  tasks_storage.py
alembic/: env.py
alembic/versions/: 2025-03-28_init.py  2025-04-16_add_outbox.py
api/adapters/http_ad/: views.py
api/adapters/kafka/basket_confirmed/: consumer.py
core/application/domain_event_handlers/: order_completed_event_handler.py
core/application/models/: outbox.py
core/application/use_cases/commands/assign_courier/: handler.py
core/domain/model/courier_aggregate/: courier.py  courier_status.py  transport.py
core/domain/model/order_aggregate/: order.py  order_status.py
core/domain/services/: dispatch_service.py
core/domain/shared/: models.py
core/ports/: courier_repo_abc.py  domain_event_abc.py  geo_location_abc.py  message_bus_producer_abc.py  order_repo_abc.py
infrastracture/adapters/grpc/: GeoContract_pb2.py  GeoContract_pb2_grpc.py  geo_location.py  grpc_resource.py
infrastracture/adapters/kafka/: status_change_events_producer.py
infrastracture/adapters/postgres/: db_dsn.py  db_resource.py  resource.py  tables.py  unit_of_work.py
infrastracture/adapters/postgres/repositories/: courier_repo.py  order_repo.py  outbox_repo.py  shared.py
tests/: conftest.py  test_http_api.py
tests/test_api/: test_http_api.py  test_kafka.py
tests/test_core/test_domain/: test_courier_aggregate.py  test_order_aggregate.py  test_shared_models.py
tests/test_core/test_service/: test_dispatch.py
tests/test_core/test_use_cases/: test_commands.py  test_queries.py
tests/test_infrastructure/: test_geo_location.py
tests/test_infrastructure/test_repositories/: test_courier_repo.py  test_order_repo.py  test_outbox_events_repo.py
(+9 files in other folders)
